--- a/Project3/src/pages/home/home.scss
+++ b/Project3/src/pages/home/home.scss
@@ -2,8 +2,9 @@
 
 // }
 
-h3, p{
+h1, p{
     text-align: center;
+    font-family: 'Noto Serif', serif;
 }
 
 #addfolder{
@@ -18,4 +19,14 @@ h3, p{
     align-content: center;
     margin-left: auto;
     margin-right: auto;
+    
 }
+
+h1{
+    font-size: 30px;
+}
+
+
+
+
+
