Persistent SideMenu Button
I made it so that the side menu button stays on every page. I also made it so that a user can swipe from the left side of the screen on a mobile device to pull out the sidemenu

--- a/Project3/src/app/app.html
+++ b/Project3/src/app/app.html
@@ -7,7 +7,7 @@
 
   <ion-content class="sidemenubuttons">
     <ion-list>
-      <button color="sidebtn" menuClose ion-item *ngFor="let p of pages" (click)="openPage(p)">
+      <button color="sidebtn" menuClose ion-item persistent="true" *ngFor="let p of pages" (click)="openPage(p)">
         {{p.title}}
       </button>
     </ion-list>
@@ -16,4 +16,4 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" persistent="true" #content swipeBackEnabled="true"></ion-nav>
