Update with Email Auth
Email and password account creation now supported, as well as a forgot password page with working email password change retrieval

--- a/Project3/src/app/app.scss
+++ b/Project3/src/app/app.scss
@@ -30,7 +30,7 @@ ion-menu{
 }
 
 .ion-button, .sidemenubuttons{
-    background-color: #49A4E5;
+    background-color: #5D8EBF;
 }
 
 .createCard{
@@ -43,4 +43,16 @@ ion-menu{
 
 .googleButton{
     background-color: rgba(228, 239, 247, 0.815);
+}
+
+.login{
+    background-color: rgba(116, 183, 255, 0.822);
+}
+
+.forgotPW{
+    background-color: rgba(101, 153, 248, 0.89);
+}
+
+.createacnt{
+    background-color: rgba(48, 127, 247, 0.822);
 }
