--- a/Project3/src/app/app.scss
+++ b/Project3/src/app/app.scss
@@ -56,3 +56,7 @@ ion-menu{
 .createacnt{
     background-color: rgba(48, 127, 247, 0.822);
 }
+
+.removeButton{
+    background-color: rgba(253, 23, 23, 0.692)
+}
